# SDL3-Learning

./: CMakeLists.txt  main.cpp
Dependencies/GLAD/glad/: glad.h
Dependencies/GLAD/src/: glad.c
